Changed background color, h1 text color and hr border color

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <center>
   <body>
     <img src="https://avatars.githubusercontent.com/u/25196341?s=460&u=41f3e187cb27692be5a79c3ed5c008b17fd8176e&v=4" alt="Rubén's profile picture">
-    <h1>Rubén Guerrero</h1>
-    <p><em>Data Analyst and Psychologist</em></p>
+    <h1>I'm Rubén</h1>
+    <p><em>an Analytics Engineer</em></p>
     <p>I am a Data Analyst with a strong interest in Data Science, Data
       Engineering, Psychology, Cognitive Neuroscience, Behavioral Science and Neuromarketing.</p>
     </center>
